minio/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-api-service
  namespace: minio
spec:
  selector:
    app: minio
  ports:
    - port: 9000
      targetPort: 9000
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: minio-console-service
  namespace: minio
spec:
  selector:
    app: minio
  ports:
    - port: 9001
      targetPort: 9001
  type: ClusterIP
