minio/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: minio
spec:
  ingressClassName: traefik
  tls:
  - hosts:
      - minio-test-console.k8s.bumgu.com
      - minio-test-api.k8s.bumgu.com
  rules:
    - host: minio-test-console.k8s.bumgu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-console-service
                port:
                  number: 9001
    - host: minio-test-api.k8s.bumgu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-api-service
                port:
                  number: 9000
